# dewey-time

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FLAG_ENGINE_MVP.md  FRAPPE_ATTENDANCE_RULES.md  FRAPPE_CUSTOM_APP_AGENT_GUIDE.md  LICENSE  MANIFEST.in  MVP_ROLLOUT_READINESS.md  README.md  package-lock.json  package.json  pyproject.toml  setup.py  vite.config.ts
.github/workflows/: frappe-asset-smoke.yml  frontend.yml  tests.yml
dev/sandbox/: .gitignore  README.md  docker-compose.yml  fetch_backup.py  frappe-sandbox  frappe-sandbox.json
dewey_time/: hooks.py  modules.txt  package.json  patches.txt  webpush.py
dewey_time/attendance_engine/: absence_flags.py  absence_intervals.py  closeout.py  coverage_api.py  dev_tools.py  device_sync.py  holidays.py  hr_calendar.py  intraday.py  launcher.py  lunch_detection.py  lunch_flags.py  record_issue_flags.py  schedule_api.py  schedule_import.py  schedule_resolver.py
dewey_time/docs/: ARCHITECTURE.md  CALENDAR_DATA_CONTRACT.md  HR_ATTENDANCE_DEPLOY.md
dewey_time/patches/: add_adms_admin_role.py  remove_dewey_time_desk_workspace.py  remove_legacy_hr_attendance_pages.py  reset_dewey_time_navigation.py  resync_hr_attendance_assets_v3.py  resync_hr_attendance_assets_v4.py  resync_hr_attendance_assets_v5.py  resync_hr_attendance_assets_v6.py  resync_hr_attendance_assets_v7.py  resync_hr_attendance_assets_v8.py  resync_hr_attendance_assets_v9.py  seed_launcher_tiles.py  sync_dewey_time_desk_navigation.py
dewey_time/utils/: anonymize.py  (+4 more)
docs/: BRIDGE_AGENT_HANDOFF.md  FRAPPE_ATTENDANCE_RULES.md
src/: App.tsx  index.css
zkteco_hr/: patches.txt
(+361 files in other folders)
