[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkteco_hr"
version = "0.0.1"
description = "ZKTeco attendance engine (Frappe/ERPNext HRMS) - MVP flags + weekly view"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# Web push (PWA notifications). pip installs these with `pip install -e .`
# during `bench get-app`, so the bench env has them for webpush.py.
dependencies = ["pywebpush>=1.14"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "zkteco_hr"

[tool.setuptools.packages.find]
where = ["zkteco_hr"]
