[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dewey_time"
version = "0.0.1"
description = "ZKTeco attendance engine (Frappe/ERPNext HRMS) - MVP flags + weekly view"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# Web push (PWA notifications). pip installs these with `pip install -e .`
# during `bench get-app`, so the bench env has them for webpush.py.
dependencies = ["pywebpush>=1.14"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dewey_time", "dewey_time.*"]

# Frappe Cloud reads this when installing the app from GitHub to pick a compatible
# Frappe version. Prod runs the version-16 track (frappe/erpnext/hrms 16.x).
[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
